@@ -1,3 +1,13 @@
+commit ca0d09f7bc017ef9e372ae29a0c19bf20b68aca5
+Author: Monsyne Dragon <mdragon@rackspace.com>
+Date:   Mon Sep 8 19:57:24 2014 +0000
+
+    Save newly generated events from pipeline
+    
+    Save newly created events from pipeline run if pipeline commits.
+    Refactor trigger manager api wart, move save_event call into add_event
+        to make add_event and add_notification symmetric.
+
 commit 0c619c133d3c248d62a2c5f6441d4fae0bf7042a
 Author: Monsyne Dragon <mdragon@rackspace.com>
 Date:   Sun Sep 7 04:07:20 2014 +0000
